## v1.2.3 TITLE HERE ALL CAPS.
**Added:**
    - You can add multiple item here.
**Changed:**
    - You can add multiple item here.
**Fixed:**
    - You can add multiple item here.
```

# MILESTONE PLAN / VERSION DIAFLOW
- Add NEW Change log entry here:

## (ONGOING) v1.0.0 PRODUCTION GRADE RELEASE OF THE PROJECT.
**Added:**
    - ONGOING
**Changed:**
    - ONGOING
**Fixed:**
    - ONGOING

---

## (CURRENT) v0.9.8 CHANGE OF REDIS MEDDLEWARES.
**Added:**
    - Added NPM ioredis to the modules.
**Changed:**
    - Removed the NPM redis from the modules.
    - Change experimental to test folder for unit test.

---

## v0.9.7 CHANGE AND FIXES FOR THE PROJECT WORKFLOW. (September 21, 2019 4:00PM)
**Added:** 
    - Make a new redis demo to nginx public html.
    - Make a folder for experimental like this redis-demo.
    - Added not-tested load test script.
    - Added nginx demo to the project.
**Changed:**
    - Updated the nginx config to several load balancers.
    - Updated the redis demo server to new nginx html.
    - Updated the nginx index.html default nginx.
    - Remove demo on node public html.
    - Updated Readme and package json.
    - Initially modified package and readme.
    - Remove other package mysql and php.

---

## v0.9.6 CHANGE AND FIXES FOR THE PROJECT WORKFLOW. (September 21, 2019 4:00PM)
**Added:** 
    - Backup of September 2019.
    - Added Manok Roleta to the game.
**Changed:**
    - Edit package.json to target server.js
    - Updated readme initially as of 2019.
    - Make the server default address to localhost:8080
    - Updated ndoe modules and usocketnet to v0.9.5
    - Deleted all the custom windows batch file.
    - Deleted unecessary files and added required git 2019.
**Fixed:**
    - Just fix the initial fix setup 2019.
    
---

## v0.9.5 - PREPARING FOR MICROSERVICE FEATURE (SEPTEMBER 15, 2018 1:57AM)
**Added:**
    - Make the json database not included on push to git server.