@@ -6,7 +6,9 @@
 //																																//
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-require('./server_library/core');
+require('./server/master');
+require('./server/chat');
+require('./server/game');
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //																																//
